# movielens-mlops

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
conf/: config.yaml
conf/exp/: baseline_full.yaml  baseline_test.yaml  classic_test.yaml
config/: config.yaml
mlruns/0/: meta.yaml
mlruns/340576038513312308/: meta.yaml
mlruns/340576038513312308/02a4fcfa509c43edb04971987e2fbb8d/: meta.yaml
mlruns/340576038513312308/02a4fcfa509c43edb04971987e2fbb8d/tags/: mlflow.runName
mlruns/340576038513312308/4cb65b1f94f04da8b83facb96a678d5c/: meta.yaml
mlruns/340576038513312308/4cb65b1f94f04da8b83facb96a678d5c/metrics/: rmse
mlruns/340576038513312308/4cb65b1f94f04da8b83facb96a678d5c/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/340576038513312308/5d1bd91b27534093b434d8112ad9e87c/: meta.yaml
mlruns/340576038513312308/5d1bd91b27534093b434d8112ad9e87c/metrics/: rmse
mlruns/340576038513312308/5d1bd91b27534093b434d8112ad9e87c/tags/: mlflow.runName
mlruns/340576038513312308/c07149f1b9664dbfa0ce323e8ceaebb6/: meta.yaml
mlruns/340576038513312308/c07149f1b9664dbfa0ce323e8ceaebb6/tags/: mlflow.runName
mlruns/468922381573513737/: meta.yaml
mlruns/468922381573513737/bca0938750d649549354ea7e012df8d2/: meta.yaml
mlruns/468922381573513737/f7c234fc0ffc4314980bf7a0ba407b68/: meta.yaml
notebooks/: eda.ipynb  test_components.ipynb
scripts/: main.py
src/movielens/: __init__.py  analysis.py  config.py  dataset.py  evaluate.py  feature.py  logger.py  train.py
src/movielens/conf/: config.py  schema.py
src/movielens/config/: columns.py  config.yaml
src/movielens/features/: base.py  baseline.py  classic.py
src/movielens/models/: base.py  baseline.py  classic.py  factory.py
src/movielens/pipelines/: base.py  baseline.py  classic.py
src/movielens/training/: base.py  baseline.py  classic.py
src/movielens/utils/: analysis.py  dataset.py  evaluate.py  exception.py  logger.py  plotting.py
(+10 files in other folders)
