[project]
name = "movielens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AnthonyBeech", email = "abeech123@virginmedia.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
movielens = "movielens:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]
