[project]
name = "movielens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AnthonyBeech", email = "abeech123@virginmedia.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[project.scripts]
movielens = "movielens:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]
